<resources>
    <string name="app_name">Start-Finish system</string>
    <string name="start">START</string>
    <string name="finish">FINISH</string>
    <string name="result">RESULT</string>
    <string name="admin">ADMIN</string>
    <string name="user">USER</string>
    <string name="textHourNull">00</string>
    <string name="textMsNull">000</string>
    <string name="textColon">:</string>
    <string name="saveSetting">Save changes</string>

    <!-- настойки відображення на дисплеї-->
    <dimen name="textDigitSize">70dp</dimen>
    <dimen name="textMsSize">40dp</dimen>
    <dimen name="textSize">24dp</dimen>
    <string name="serifMonospace">sans-serif-smallcaps</string>

    <!-- надписи для меню-->
    <string name="actionSettings">Settings</string>
    <string name="actionAdmin">Go to Admin</string>
    <string name="actionUser">Go to User</string>



    <string name="text">Простое переключение на другой экран

Приложение не всегда состоит из одного экрана. Например, мы создали очень полезную программу и пользователю хочется узнать, кто же её автор. Он нажимает на кнопку «О программе» и попадает на новый экран, где находится полезная информация о версии программы, авторе, адресе сайта, сколько у автора котов и т.д. Воспринимайте экран активности как веб-страницу с ссылкой на другую страницу. Если вы посмотрите на код в файле MainActivity.java из прошлых уроков, то увидите, что наш класс MainActivity тоже относится к Activity или, если говорить точнее, наследуется от него.


public class MainActivity extends Activity
Как нетрудно догадаться, нам следует создать новый класс, который может быть похож на MainActivity и затем как-то переключиться на него при нажатии кнопки.

Для эксперимента мы возьмем программу из первого урока и будем использовать для опытов кнопку (или создайте новый проект с одной кнопкой на экране). Далее создадим новую форму для отображения полезной информации. Например, покажем пользователю, что делает кот, когда идёт налево и направо. Согласитесь, это очень важная информация, дающая ключ к разгадке Вселенной.

Создавать новую активность будем вручную, хотя в студии есть готовые шаблоны. Но там ничего сложного и для лучшего понимания полезно всё делать руками.

Создадим новый XML-файл разметки activity_about.xml в папке res/layout. Щёлкните правой кнопкой мыши на папке layout и выберите из контекстного меню New | Layout resource file. Появится диалоговое окно. В первом поле вводим имя файла activity_about. Во втором нужно ввести корневой элемент. По умолчанию там стоит LinearLayout. Стираем текст и вводим ScrollView. Ввода нескольких символов достаточно, чтобы студия подсказала готовые варианты, можно сразу нажать Enter, не дожидаясь полного ввода слова:</string>

</resources>
