<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comkodizhuk.vk.v1_noble.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutStatus"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7.68"
            android:text="@string/start"
            android:textSize="@dimen/textSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutStartTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutStart"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMinStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@string/serifMonospace"
            android:text="@string/textHourNull"
            android:textSize="@dimen/textDigitSize" />

        <TextView
            android:id="@+id/textViewColonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@string/serifMonospace"
            android:text="@string/textColon"
            android:textSize="@dimen/textDigitSize" />

        <TextView
            android:id="@+id/textViewSecStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@string/serifMonospace"
            android:text="@string/textHourNull"
            android:textSize="@dimen/textDigitSize" />

        <TextView
            android:id="@+id/textViewMsStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@string/serifMonospace"
            android:text="@string/textMsNull"
            android:textSize="@dimen/textMsSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutStartTime"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/finish"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFinishTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutFinish"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMinFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@string/serifMonospace"
            android:text="@string/textHourNull"
            android:textSize="@dimen/textDigitSize" />

        <TextView
            android:id="@+id/textViewColonFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@string/serifMonospace"
            android:text="@string/textColon"
            android:textSize="@dimen/textDigitSize" />

        <TextView
            android:id="@+id/textViewSecFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@string/serifMonospace"
            android:text="@string/textHourNull"
            android:textSize="@dimen/textDigitSize" />

        <TextView
            android:id="@+id/textViewMsFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@string/serifMonospace"
            android:text="@string/textMsNull"
            android:textSize="@dimen/textMsSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutFinishTime"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/result"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutResultTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutResult"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMinResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@string/serifMonospace"
            android:text="@string/textHourNull"
            android:textSize="@dimen/textDigitSize" />

        <TextView
            android:id="@+id/textViewColonRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@string/serifMonospace"
            android:text="@string/textColon"
            android:textSize="@dimen/textDigitSize" />

        <TextView
            android:id="@+id/textViewSecResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@string/serifMonospace"
            android:text="@string/textHourNull"
            android:textSize="@dimen/textDigitSize" />

        <TextView
            android:id="@+id/textViewMsResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@string/serifMonospace"
            android:text="@string/textMsNull"
            android:textSize="@dimen/textMsSize" />
    </LinearLayout>

</RelativeLayout>
